# Digital_product-auto_poster

./: CLAUDE.md  INTEGRATION.md  VISION.md  pyproject.toml  workflows.db
.agent/: gsd-file-manifest.json
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-verifier.md  gsd-verifier.toml
.cursor/: gsd-file-manifest.json
.cursor/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.gemini/: gsd-file-manifest.json
.gemini/agents/: gsd-debugger.md  gsd-executor.md  (+8 more)
.github/: gsd-file-manifest.json
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.windsurf/: gsd-file-manifest.json
data/: workflow.db
src/: __init__.py
streamlit/: __init__.py  app.py
(+823 files in other folders)
